# gameboy-pokered-verify

./: .gitignore  Main.lean  PLAN.md  PokeredBugs.lean  README.md  SM83.lean  lake-manifest.json  lakefile.toml
autoresearch/: .gitignore  PLAN.md  analyze.py  evaluate.py  ground_truth.json  last_run_metrics.json  measure.sh  prepare.py  program.md  pyproject.toml  researcher_program.md  results.tsv  run.py  run.sh  run_all.sh  run_experiment.sh  run_inner.py  semantic_eval.py
autoresearch/.results_1/: batch_01_analysis.md  summary_batch_01.tsv  summary_batch_minimal.tsv
autoresearch/bugs/: 01_focus_energy.md  02_one_in_256.md  03_blaine_ai.md  04_heal_overflow.md  05_psywave_desync.md  06_substitute.md  07_bide_desync.md  08_reflect_overflow.md  09_acc_eva_cancel.md  10_badge_reflect.md  blaine_ai.md  focus_energy.md  heal_overflow.md  one_in_256.md  psywave_desync.md
autoresearch/bugs_full/: 01_focus_energy.md  02_one_in_256.md  04_heal_overflow.md
autoresearch/ground_truth/: FocusEnergy.lean  HealOverflow.lean  OneIn256.lean  PsywaveDesync.lean
autoresearch/pipeline/: config.yaml  feedback_template.md  helpers.py  iteration_logic.py  system_prompt.md
autoresearch/results/: analysis_apr15_flash_10bugs.md  analysis_apr15_gemini_flash_v2.md  analysis_apr16_noasm.md  analysis_apr16_sonnet.md  analysis_semantic_fidelity.md  batch_comparison_analysis.md  summary_batch_minimal.tsv  summary_batch_minimal_opus.tsv  three_way_analysis.md  workshop_assessment.md
autoresearch/runs/20260415_112853/: results.json
autoresearch/template/: Solution.lean
(+265 files in other folders)
